Add welcome page

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -83,8 +83,8 @@ body {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000393}}
 img {
-  width: 100%;
-  height: 100%; }
+  max-width: 100%;
+  max-height: 100%; }
 
   @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/styles\.scss}line{font-family:\0000398}}
   @media (max-width: 800px) {
@@ -93,7 +93,88 @@ img {
       width: 100%;   }
 }
 
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\000031}}
+.home {
+  background: #090909;
+  border: 2px solid #666;
+  border-radius: 0.5rem;
+  margin: 2rem auto;
+  padding: 1rem 2.5rem;
+  position: relative;
+  width: 80%; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\000039}}
+  .home__container {
+    background-color: #333;
+    border: 2px solid #666;
+    border-radius: 0.5rem 0.5rem 0px 0px;
+    height: 23rem;
+    left: -2px;
+    position: absolute;
+    top: -2px;
+    width: 100%; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000320}}
+    .home__title {
+      color: #ffc000;
+      margin: 2.5rem auto; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000325}}
+      .home .main {
+        background-color: #333; }
+        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000329}}
+        .home__section {
+          margin: 2rem auto 0;
+          position: relative;
+          z-index: 1; }
+          @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000335}}
+          .home__row {
+            display: flex;
+            margin: auto;
+            width: 90%; }
+            @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000339}}
+            .home__row .first {
+              margin: 2rem; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000345}}
+  .home__paragraph {
+    margin: 4rem auto 3rem;
+    width: 90%; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000350}}
+    .home__button, .home__info {
+      margin-bottom: 2.5rem;
+      padding: 0 2rem;
+      text-align: right;
+      width: 50%; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000355}}
+      .home__button button, .home__info button {
+        float: left;
+        width: 75%; }
+        @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000360}}
+        .home__button a, .home__info a {
+          color: whitesmoke;
+          font-size: 20px; }
+          @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000363}}
+          .home__button a:hover, .home__info a:hover {
+            color: #ffc000; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000371}}
+  .home__subtitle {
+    font-size: 1.9vw;
+    margin: 2.5rem auto; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000376}}
+    .home__column {
+      padding: 1rem;
+      width: 33%; }
+      @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000379}}
+      .home__column h3 {
+        color: #ffc000; }
+  @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000385}}
+  .home__circle {
+    background-color: #333;
+    border: 2px solid #666;
+    border-radius: 50%;
+    max-height: 300px;
+    margin: auto;
+    max-width: 300px; }
+    @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/home\.scss}line{font-family:\0000394}}
+    .home__text {
+      font-size: 18px; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/about\.scss}line{font-family:\000031}}
 .about {
@@ -109,7 +190,7 @@ img {
     .about__title h2 {
       margin: 0; }
   @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/about\.scss}line{font-family:\0000315}}
-  .about__columns {
+  .about__row {
     display: flex; }
     @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/about\.scss}line{font-family:\0000319}}
     .about__column {
@@ -248,8 +329,8 @@ img {
         .training__images img {
           border: 1px solid grey;
           border-radius: 4px;
-          max-width: 100%;
-          max-height: 100%; }
+          width: 100%;
+          height: 100%; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/training\.scss}line{font-family:\0000344}}
 .zoom parent-zoom {
@@ -312,4 +393,6 @@ img {
             margin: 0; }
             @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/pedrosolisgarcia\/Repositories\/Web\ Development\/covid19\/static\/styles\/results\.scss}line{font-family:\0000355}}
             .results__image img {
-              border-radius: 0.5rem; }
+              border-radius: 0.5rem;
+              height: 100%;
+              width: 100%; }
