--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
   <div class="about__title">
     <h2>ACERCA DE ESTE PROYECTO ...</h2>
   </div>
-  <div class="about__columns">
+  <div class="about__row">
     <div class="about__column">
       <h4>¿Quién lo ha desarrollado?</h4>
   
