--- a/static/styles/training.scss
+++ b/static/styles/training.scss
@@ -35,8 +35,8 @@
     img {
       border: 1px solid grey;
       border-radius: 4px;
-      max-width:100%;
-      max-height:100%;
+      width:100%;
+      height:100%;
     }
   }
 }
