--- a/templates/home.html
+++ b/templates/home.html
@@ -3,26 +3,27 @@
 
 {% block content %}
 <div class="home">
-  <div class="home__container"></div>
-  <div class="home__section">
-    <h1 class="home__title">DIAGNOSTICA COVID-19 EN RADIOGRAFÍAS DE TÓRAX</h1>
-    <p class="home__paragraph">Aplicación de entrenamiento para la detencion de casos patológicos de coronavirus. Destinado para médicos y radiólogos. Calcula tu sensibilidad, especificidad, valores predictivos y precisión.</p>
-    <div class="home__row">
-      <div class="home__button">
-        <button
-          class="covid-button"
-          onclick="document.location.href = '/login'"
-        >
-          COVID-19 TRAINING
-        </button>
-      </div>
-      <div class="home__info">
-        <a
-          href="https://seram.es/images/site/Introduccio%CC%81n_a_la_infeccio%CC%81n_COVID-19.pdf"
-          target="_blank"
-        >
-          ¿cuáles son los hallazgos de COVID-19?
-        </a>
+  <div class="home__container">
+    <div class="home__section">
+      <h1 class="home__title">DIAGNOSTICA COVID-19 EN RADIOGRAFÍAS DE TÓRAX</h1>
+      <p class="home__paragraph">Aplicación de entrenamiento para radiólogos y para médicos de otras especialidades en diagnóstico de COVID-19 en radiografías de tórax. Calcula tu sensibilidad, especificidad, valor predictivo positivo, valor predictivo negativo y precisión global diagnosticando COVID-19.</p>
+      <div class="home__row">
+        <div class="home__button">
+          <button
+            class="covid-button"
+            onclick="document.location.href = '/login'"
+          >
+            COVID-19 TRAINING
+          </button>
+        </div>
+        <div class="home__info">
+          <a
+            href="https://seram.es/images/site/Introduccio%CC%81n_a_la_infeccio%CC%81n_COVID-19.pdf"
+            target="_blank"
+          >
+            ¿cuáles son los hallazgos de COVID-19?
+          </a>
+        </div>
       </div>
     </div>
   </div>
