--- a/static/styles/home.scss
+++ b/static/styles/home.scss
@@ -1,26 +1,20 @@
 .home {
   background: #090909;
-  border: 2px solid #666;
-  border-radius: 0.5rem;
-  margin: 2rem auto;
-  padding: 1rem 2.5rem;
-  position: relative;
-  width: 80%;
+  margin: 0px auto 2rem;
+  margin: 0px auto 2.9vh;
 
   &__container {
     background-color: #333;
-    border: 2px solid #666;
-    border-radius: 0.5rem 0.5rem 0px 0px;
-    height: 23rem;
-    left: -2px;
-    position: absolute;
-    top: -2px;
-    width: 100%;
+    border-bottom: 2px solid #666;
+    padding-top: 2rem;
+    padding-top: 2.9vh;
   }
 
   &__title {
     color: #ffc000;
-    margin: 2.5rem auto;
+    font-size: 2.5vw;
+    margin: 2.5rem auto 0;
+    margin: 3.7vh auto 0;
   }
 
   .main {
@@ -28,13 +22,13 @@
   }
 
   &__section {
-    margin: 2rem auto 0;
     position: relative;
-    z-index: 1;
   }
 
   &__row {
+    align-items: center;
     display: flex;
+    justify-content: center;
     margin: auto;
     width: 90%;
 
@@ -44,13 +38,16 @@
   }
 
   &__paragraph {
+    font-size: 1.2vw;
     margin: 4rem auto 3rem;
-    width: 90%;
+    margin: 5.9vh auto 4.4vh;
+    width: 78%;
   }
 
   &__button, &__info {
     margin-bottom: 2.5rem;
-    padding: 0 2rem;
+    margin-bottom: 3.7vh;
+    padding: 0 8%;
     text-align: right;
     width: 50%;
 
@@ -62,6 +59,7 @@
     a {
       color: whitesmoke;
       font-size: 20px;
+      font-size: 1.2vw;
 
       &:hover {
         color: #ffc000;
@@ -72,14 +70,18 @@
   &__subtitle {
     font-size: 1.9vw;
     margin: 2.5rem auto;
+    margin: 3.7vh auto;
   }
 
   &__column {
     padding: 1rem;
-    width: 33%;
+    padding: 1.42vh;
+    width: 30%;
 
     h3 {
       color: #ffc000;
+      font-size: 1.4vw;
+      margin: 2.4vh auto;
     }
   }
 
@@ -87,12 +89,14 @@
     background-color: #333;
     border: 2px solid #666;
     border-radius: 50%;
-    max-height: 300px;
     margin: auto;
+    max-height: 300px;
     max-width: 300px;
+    width: 15.7vw;
   }
 
   &__text {
     font-size: 18px;
+    font-size: 0.96vw;
   }
 }
