--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -1,6 +1,7 @@
 body {
   background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA12066_hires.jpg');
   background-attachment: fixed;
+  margin: 0;
 }
 
 select {
@@ -77,7 +78,7 @@ select {
 
   .footer {
     font-size: 16px;
-    height: 2rem; 
+    height: 2rem;
     margin-top: auto;
     width: 100%;
     a {
