--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
             href="https://seram.es/images/site/Introduccio%CC%81n_a_la_infeccio%CC%81n_COVID-19.pdf"
             target="_blank"
           >
-            ¿cuáles son los hallazgos de COVID-19?
+            ¿Cuáles son los hallazgos de COVID-19?
           </a>
         </div>
       </div>
