--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         </div>
         <div class="home__info">
           <a
-            href="https://seram.es/images/site/Introduccio%CC%81n_a_la_infeccio%CC%81n_COVID-19.pdf"
+            href="https://api.cloud.ifca.es:8080/swift/v1/covid19/HallazgosCovid.pdf"
             target="_blank"
           >
             ¿Cuáles son los hallazgos de COVID-19?
