Implement back and home button

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,17 +17,7 @@
         {% block content %}
         {% endblock %}
       </div>
-      <div class="footer">
-        {% block footer %}
-        <a href="/about">Acerca de este proyecto y su finalidad</a>
-         | <a href="https://drive.google.com/file/d/15F7yiFtvUZLpIxU1s6TXd_Ni1K3adqYL/view?usp=sharing" target="_blank">Términos y condiciones de uso</a>
-         | <a href="mailto:covid19trainingapp@gmail.com">Contacta con nosotros</a>
-         | Copyright &copy; IFCA - CSIC - HUMV
-        {% endblock %}
-      </div>
+      {% include "snippets/footer/footer.html" %}
     </div>
-    {% if message %}
-      <p>Note: {{ message }}</p>
-    {% endif %}
   </body>
 </html>
