--- a/templates/results.html
+++ b/templates/results.html
@@ -3,6 +3,7 @@
 {% block title %}Resultados{% endblock %}
 
 {% block content %}
+{% include "snippets/home-button/home-button.html" %}
 <div class="content results">
   <h1>Resultados del test</h1>
   {% if res[5]==0 %}
