--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,7 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
+{% include "snippets/back-button/back-button.html" %}
 <div class="about">
   <div class="about__title">
     <h2>ACERCA DE ESTE PROYECTO ...</h2>
