--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "snippets/back-button/back-button.html" %}
   <div class="content login">
     <div class="login__avatar">
       <img
