--- a/templates/start.html
+++ b/templates/start.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "snippets/back-button/back-button.html" %}
   <div class="content start">
     <div class="start__avatar">
       <img
