--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <div class="about__column">
       <h4>¿Quién lo ha desarrollado?</h4>
   
-      <p class="about__paragraph">Este proyecto ha sido desarrollado de manera altruista y desinteresada por el Equipo de Investigación en Inteligencia Artificial e Imagen Médica  del IFCA - CSIC y del Servicio de Radiodiagnóstico del Hospital Universitario Marqués de Valdecilla. Ha contado con el apoyo de otros profesionales que se han prestado a brindar sus servicios sin coste alguno: gracias a Fernando y a Pedro por sus horas de programación; gracias a CAFE & ASOCIADOS por la asesoria jurídica y confección de los términos y condiciones de uso.</p>
+      <p class="about__paragraph">Este proyecto ha sido desarrollado de manera altruista y desinteresada por el grupo de Computación Avanzada y e-Ciencia  del IFCA - CSIC y el Servicio de Radiodiagnóstico del Hospital Universitario Marqués de Valdecilla. Ha contado con el apoyo de otros profesionales que se han prestado a brindar sus servicios sin coste alguno: gracias a Fernando y a Pedro por sus horas de programación; gracias a CAFE & ASOCIADOS por la asesoria jurídica y confección de los términos y condiciones de uso.</p>
     </div>
     <div class="about__column">
       <h4>¿Cuál es su finalidad?</h4>
@@ -21,7 +21,7 @@
     <div class="about__column">
       <h4>Dedicado a ...</h4>
   
-      <p class="about__paragraph">Dedicado a todos los profesionales del Hospital Universitario Marqués de Valdecilla y del resto de instituciones sanitarias, que de manera ejemplar han luchado desde el comienzo de esta pandemia por salvaguardar la salud y la vida de todos. Gracias al personal médico y de enfermería de los servicios de urgencias, de intensivos y de las plantas COVID-19; gracias a los radiólogos y técnicos de los servicios de radiodiagnóstico; gracias al personal de limpieza, seguridad y mantenimiento; y a todos aquellos implicados de manera directa o indirecta en esta crisis sanitaria.</p>
+      <p class="about__paragraph">Dedicado a todos los profesionales del Hospital Universitario Marqués de Valdecilla y del resto de instituciones sanitarias, que de manera ejemplar han luchado desde el comienzo de esta pandemia por salvaguardar la salud y la vida de todos. Gracias al personal médico y de enfermería de los servicios de urgencias, de intensivos y de las plantas COVID-19; gracias a los radiólogos, técnicos y pacientes de los servicios de radiodiagnóstico; gracias al personal de limpieza, seguridad y mantenimiento; y a todos aquellos implicados de manera directa o indirecta en esta crisis sanitaria.</p>
     </div>
   </div>
 </div>
