--- a/templates/snippets/footer/footer.html
+++ b/templates/snippets/footer/footer.html
@@ -1,8 +1,8 @@
 <div class="footer">
   {% block footer %}
   <a href="/about">Acerca de este proyecto y su finalidad</a>
-   | <a href="https://drive.google.com/file/d/15F7yiFtvUZLpIxU1s6TXd_Ni1K3adqYL/view?usp=sharing" target="_blank">Términos y condiciones de uso</a>
-   | <a href="mailto:covid19trainingapp@gmail.com">Contacta con nosotros</a>
+   | <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POL%C3%8DTICA%20DE%20PRIVACIDAD.pdf" target="_blank">Términos y condiciones de uso</a>
+   | <a href="mailto:covid19training@ifca.unican.es">Contacta con nosotros</a>
    | Copyright &copy; IFCA - CSIC - HUMV
   {% endblock %}
 </div>
