--- a/templates/results.html
+++ b/templates/results.html
@@ -34,7 +34,7 @@
   {% else %}
     {% if failed_answers|length!=0 %}
     <div class="results__separator"></div>
-      <h2><b>Revisa tus respuestas erroneas</b></h2>
+      <h2><b>Revisa tus respuestas erróneas</b></h2>
     {% endif%}
     {% for answer in failed_answers %}
       <div class="results__card">
