--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <div class="about__column">
       <h4>¿Quién lo ha desarrollado?</h4>
   
-      <p class="about__paragraph">Este proyecto ha sido desarrollado de manera altruista y desinteresada por el grupo de Computación Avanzada y e-Ciencia  del IFCA - CSIC y el Servicio de Radiodiagnóstico del Hospital Universitario Marqués de Valdecilla. Ha contado con el apoyo de otros profesionales que se han prestado a brindar sus servicios sin coste alguno: gracias a Fernando y a Pedro por sus horas de programación; gracias a CAFE & ASOCIADOS por la asesoria jurídica y confección de los términos y condiciones de uso.</p>
+      <p class="about__paragraph">Este proyecto ha sido desarrollado de manera altruista y desinteresada por el grupo de Computación Avanzada y e-Ciencia  del IFCA y el Servicio de Radiodiagnóstico del Hospital Universitario Marqués de Valdecilla. Ha contado con el apoyo de otros profesionales que se han prestado a brindar sus servicios sin coste alguno: gracias a Fernando y a Pedro por sus horas de programación; gracias a CAFE & ASOCIADOS por la asesoria jurídica y confección de los términos y condiciones de uso.</p>
     </div>
     <div class="about__column">
       <h4>¿Cuál es su finalidad?</h4>
