--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA12066_hires.jpg');
+  background: #090909;
   background-attachment: fixed;
   margin: 0;
 }
